--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html lang="pt">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DCC202 - Atividade 3: (.*)/</title>
 </head>
+
 <body>
-    
-</body>
+<main>  
+    Main page
+</main>
+</body> 
 </html>
