--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 
 <body>
 <main>  
-<h1>DCC202 - Atividade 3: (.*)/</h1>    
+<h1>DCC202 - Atividade 3: (.*)/</h1>  
+<p> blablabla</p>  
 </main>
 </body> 
 </html>
