Adiciona duas seções

--- a/index.html
+++ b/index.html
@@ -10,7 +10,13 @@
 <body>
 <main>  
 <h1>DCC202 - Atividade 3: (.*)/</h1>  
-<p> blablabla</p>  
+<p> blablabla</p> 
+<section>
+    1
+</section>
+<section>
+    2
+</section>
 </main>
 </body> 
 </html>
