título na seção 1

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <h1>DCC202 - Atividade 3: (.*)/</h1>  
 <p> blablabla</p> 
 <section>
-    1
+    <h2>/Naturalidade/</h2>
 </section>
 <section>
     2
